# otus-cpp-pro

./: ++HW01(CI-CD).txt  ++HW01_CI-CD-gtest.txt  ++HW01_CI-CD.txt  ++HW02_ip-filter.txt  ++main.txt  ++test-branch.txt  CMakeLists.txt  readme.md  test_version.cpp  tests.cpp
.github/workflows/: -=release — копия.yml=-  release.yml
